fixing spacing

--- a/extra-large-devices-styles.css
+++ b/extra-large-devices-styles.css
@@ -4,6 +4,7 @@
 }
 #libguide-head-background {
     background: url('libguide-header-1000+.svg');
+    background-position: top center;
     height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
