--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -8,6 +8,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
+        background-position: top center;
 	}
 	h1 {
         margin: 10% 30% 10% 30%;
